--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,12 @@
         "setting" : {
             "urlCheck" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+        "permission" : {
+            "scope.userLocation" : {
+                "desc" : "用于获取附近的车站信息"
+            }
+        }
     },
     "mp-alipay" : {
         "usingComponents" : true
